--- a/src/index.html
+++ b/src/index.html
@@ -3,33 +3,104 @@
 
 {% block content %}
 <div class="max-w-4xl mx-auto text-center">
-    <h2 class="text-5xl font-extrabold">Welcome to HoML</h2>
-    <p class="text-xl text-gray-400 mt-4">The easiest & fastest way to run LLMs in your home lab.</p>
-    <div class="mt-8">
-        <a href="models/" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg text-lg">Explore Models</a>
-        <a href="download.html" class="ml-4 bg-gray-700 hover:bg-gray-800 text-white font-bold py-3 px-6 rounded-lg text-lg">Download</a>
+    <h2 class="text-4xl md:text-5xl font-extrabold">Welcome to HoML</h2>
+    <p class="text-lg md:text-xl text-gray-400 mt-4">The easiest & fastest way to run LLMs in your home lab.</p>
+    <img src="images/index.png" alt="HoML" class="mt-8 rounded-lg shadow-lg mx-auto" style="max-width: 200px;">
+    <div class="mt-8 flex flex-col md:flex-row justify-center items-center">
+        <a href="download.html" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg text-lg mb-4 md:mb-0 md:mr-4">Download</a>
+        <a href="models/" class="bg-gray-700 hover:bg-gray-800 text-white font-bold py-3 px-6 rounded-lg text-lg">Explore Models</a>
     </div>
 </div>
 
-<div class="max-w-4xl mx-auto text-left mt-16">
-    <h3 class="text-3xl font-bold mb-6 text-center">How to Use HoML</h3>
-    <div class="grid grid-cols-1 md:grid-cols-1 gap-6">
-        <div class="bg-gray-800 rounded-lg p-6">
-            <h4 class="text-xl font-semibold mb-2">Pull a model from Hugging Face Hub</h4>
-            <p class="text-gray-400 mb-4">Download a model to your local machine.</p>
-            <pre class="bg-gray-900 rounded-lg p-4 text-white overflow-x-auto"><code>homl pull gemma-3-4b-it</code></pre>
+<div class="max-w-4xl mx-auto text-left mt-12 md:mt-16">
+    <h3 class="text-2xl md:text-3xl font-bold mb-6 text-center">How to Use HoML</h3>
+    <div class="grid grid-cols-1 gap-6">
+        <div class="relative bg-gray-800 rounded-lg p-4 md:p-6">
+            <h4 class="text-lg md:text-xl font-semibold mb-2">Install HoML</h4>
+            <p class="text-gray-400 mb-4">Install the HoML server and CLI.</p>
+            <div class="relative">
+                <div class="relative">
+                <pre class="bg-gray-900 rounded-lg p-4 text-white overflow-x-auto"><code>homl install</code></pre>
+                <button class="copy-btn absolute top-1/2 right-2 transform -translate-y-1/2 bg-gray-700 hover:bg-gray-600 text-white p-1 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
+                    </svg>
+                    <span class="copy-tooltip absolute -top-8 left-1/2 -translate-x-1/2 bg-gray-900 text-white text-xs rounded py-1 px-2 opacity-0 pointer-events-none transition-opacity duration-300">Copied!</span>
+                </button>
+            </div>
+            </div>
         </div>
-        <div class="bg-gray-800 rounded-lg p-6">
-            <h4 class="text-xl font-semibold mb-2">Run a model in interactive chat mode</h4>
+        <div class="relative bg-gray-800 rounded-lg p-4 md:p-6">
+            <h4 class="text-lg md:text-xl font-semibold mb-2">Pull a model from Hugging Face Hub</h4>
+            <p class="text-gray-400 mb-4">Download a model to your local machine. You can use a shorthand alias for curated models.</p>
+            <div class="relative">
+                <div class="relative">
+                <pre class="bg-gray-900 rounded-lg p-4 text-white overflow-x-auto"><code>homl pull gemma-3-4b-it</code></pre>
+                <button class="copy-btn absolute top-1/2 right-2 transform -translate-y-1/2 bg-gray-700 hover:bg-gray-600 text-white p-1 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
+                    </svg>
+                    <span class="copy-tooltip absolute -top-8 left-1/2 -translate-x-1/2 bg-gray-900 text-white text-xs rounded py-1 px-2 opacity-0 pointer-events-none transition-opacity duration-300">Copied!</span>
+                </button>
+            </div>
+            </div>
+            <p class="text-gray-400 mt-4 mb-4">Or use the full Hugging Face model ID:</p>
+            <div class="relative">
+                <div class="relative">
+                <pre class="bg-gray-900 rounded-lg p-4 text-white overflow-x-auto"><code>homl pull google/gemma-3-4b-it</code></pre>
+                <button class="copy-btn absolute top-1/2 right-2 transform -translate-y-1/2 bg-gray-700 hover:bg-gray-600 text-white p-1 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
+                    </svg>
+                    <span class="copy-tooltip absolute -top-8 left-1/2 -translate-x-1/2 bg-gray-900 text-white text-xs rounded py-1 px-2 opacity-0 pointer-events-none transition-opacity duration-300">Copied!</span>
+                </button>
+            </div>
+            </div>
+        </div>
+        <div class="relative bg-gray-800 rounded-lg p-4 md:p-6">
+            <h4 class="text-lg md:text-xl font-semibold mb-2">Run a model in interactive chat mode</h4>
             <p class="text-gray-400 mb-4">Start a conversation with a model.</p>
-            <pre class="bg-gray-900 rounded-lg p-4 text-white overflow-x-auto"><code>homl run gemma-3-4b-it</code></pre>
-            <p class="text-gray-400 mt-4 mb-4">You can also use the full Hugging Face model ID:</p>
-            <pre class="bg-gray-900 rounded-lg p-4 text-white overflow-x-auto"><code>homl run google/gemma-3-4b-it</code></pre>
+            <div class="relative">
+                <div class="relative">
+                <pre class="bg-gray-900 rounded-lg p-4 text-white overflow-x-auto"><code>homl run gemma-3-4b-it</code></pre>
+                <button class="copy-btn absolute top-1/2 right-2 transform -translate-y-1/2 bg-gray-700 hover:bg-gray-600 text-white p-1 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
+                    </svg>
+                    <span class="copy-tooltip absolute -top-8 left-1/2 -translate-x-1/2 bg-gray-900 text-white text-xs rounded py-1 px-2 opacity-0 pointer-events-none transition-opacity duration-300">Copied!</span>
+                </button>
+            </div>
+            </div>
         </div>
-        <div class="bg-gray-800 rounded-lg p-6">
-            <h4 class="text-xl font-semibold mb-2">Start the OpenAI-compatible API server</h4>
-            <p class="text-gray-400 mb-4">Serve models through an API.</p>
-            <pre class="bg-gray-900 rounded-lg p-4 text-white overflow-x-auto"><code>homl serve</code></pre>
+        <div class="relative bg-gray-800 rounded-lg p-4 md:p-6">
+            <h4 class="text-lg md:text-xl font-semibold mb-2">List local models</h4>
+            <p class="text-gray-400 mb-4">List all models that are available locally.</p>
+            <div class="relative">
+                <div class="relative">
+                <pre class="bg-gray-900 rounded-lg p-4 text-white overflow-x-auto"><code>homl list</code></pre>
+                <button class="copy-btn absolute top-1/2 right-2 transform -translate-y-1/2 bg-gray-700 hover:bg-gray-600 text-white p-1 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
+                    </svg>
+                    <span class="copy-tooltip absolute -top-8 left-1/2 -translate-x-1/2 bg-gray-900 text-white text-xs rounded py-1 px-2 opacity-0 pointer-events-none transition-opacity duration-300">Copied!</span>
+                </button>
+            </div>
+            </div>
+        </div>
+        <div class="relative bg-gray-800 rounded-lg p-4 md:p-6">
+            <h4 class="text-lg md:text-xl font-semibold mb-2">Check running models</h4>
+            <p class="text-gray-400 mb-4">Check the status of models that are currently running.</p>
+            <div class="relative">
+                <div class="relative">
+                <pre class="bg-gray-900 rounded-lg p-4 text-white overflow-x-auto"><code>homl ps</code></pre>
+                <button class="copy-btn absolute top-1/2 right-2 transform -translate-y-1/2 bg-gray-700 hover:bg-gray-600 text-white p-1 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
+                    </svg>
+                    <span class="copy-tooltip absolute -top-8 left-1/2 -translate-x-1/2 bg-gray-900 text-white text-xs rounded py-1 px-2 opacity-0 pointer-events-none transition-opacity duration-300">Copied!</span>
+                </button>
+            </div>
+            </div>
         </div>
     </div>
 </div>
