--- a/src/models/model_page.html
+++ b/src/models/model_page.html
@@ -6,23 +6,59 @@
 
     <div class="mt-4">
         <h2 class="text-4xl font-extrabold">{{ model.display_name }}</h2>
-    </div>
-
-    <div class="mt-8 bg-gray-800 rounded-lg p-6">
-        <h3 class="text-2xl font-bold">Model Details</h3>
         <p class="text-gray-400 mt-4">
             {{ model.description }}
         </p>
-        <div class="mt-6">
-            <span class="inline-block bg-gray-700 rounded-full px-3 py-1 text-sm font-semibold text-gray-300 mr-2">{{ model.parameters }} parameters</span>
-            <span class="inline-block bg-gray-700 rounded-full px-3 py-1 text-sm font-semibold text-gray-300 mr-2">{{ model.type }}</span>
-        </div>
     </div>
 
-    <div class="mt-8">
-        <h3 class="text-2xl font-bold">Pull this model</h3>
-        <p class="text-gray-400 mt-2">Use the following command with the HoML CLI:</p>
-        <pre class="bg-gray-800 p-4 rounded-lg mt-2 text-green-400"><code>{{ model.pull_command }}</code></pre>
+    {% for variant in model.variants %}
+    <div class="mt-8 bg-gray-800 rounded-lg p-6">
+        <h3 class="text-2xl font-bold">{{ variant.display_name }}</h3>
+        <div class="mt-6">
+            <span class="inline-block bg-gray-700 rounded-full px-3 py-1 text-sm font-semibold text-gray-300 mr-2">{{ variant.parameters }} parameters</span>
+            <span class="inline-block bg-gray-700 rounded-full px-3 py-1 text-sm font-semibold text-gray-300 mr-2">{{ variant.type }}</span>
+        </div>
+
+        <div class="mt-8">
+            <h4 class="text-xl font-bold">Pull this model</h4>
+            <p class="text-gray-400 mt-2">Use the following command with the HoML CLI:</p>
+            <div class="relative">
+                <pre class="bg-gray-900 rounded-lg p-4 text-white overflow-x-auto"><code>{{ variant.pull_command }}</code></pre>
+                <button class="copy-btn absolute top-1/2 right-2 transform -translate-y-1/2 bg-gray-700 hover:bg-gray-600 text-white p-1 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
+                    </svg>
+                    <span class="copy-tooltip absolute -top-8 left-1/2 -translate-x-1/2 bg-gray-900 text-white text-xs rounded py-1 px-2 opacity-0 pointer-events-none transition-opacity duration-300">Copied!</span>
+                </button>
+            </div>
+        </div>
+
+        {% if variant.quantization or variant.disk_space or variant.gpu_memory %}
+        <div class="mt-8">
+            <h4 class="text-xl font-bold">Resource Requirements</h4>
+            <table class="w-full text-left border-collapse mt-4">
+                <thead>
+                    <tr>
+                        <th class="border-b-2 border-gray-700 py-2">Quantization</th>
+                        <th class="border-b-2 border-gray-700 py-2">Disk Space</th>
+                        <th class="border-b-2 border-gray-700 py-2">GPU Memory</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="py-2">{{ variant.quantization | default('N/A') }}</td>
+                        <td class="py-2">{{ variant.disk_space | default('N/A') }}</td>
+                        <td class="py-2">{{ variant.gpu_memory | default('N/A') }}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        {% endif %}
     </div>
+    {% endfor %}
 </div>
+{% endblock %}
+
+{% block scripts %}
+<script src="/js/app.js"></script>
 {% endblock %}
