--- a/src/download.html
+++ b/src/download.html
@@ -25,7 +25,7 @@
     </p>
     <p class="text-gray-400 mt-4">After installing the CLI, run the following command to install and start the HoML server:</p>
     <div class="relative">
-        <pre class="bg-gray-800 p-4 rounded-lg mt-4 text-green-400 overflow-x-auto"><code>homl install</code></pre>
+        <pre class="bg-gray-800 p-4 rounded-lg mt-4 text-green-400 overflow-x-auto"><code>homl server install</code></pre>
         <button class="copy-btn absolute top-1/2 right-2 transform -translate-y-1/2 bg-gray-700 hover:bg-gray-600 text-white p-1 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
@@ -33,23 +33,5 @@
             <span class="copy-tooltip absolute -top-8 left-1/2 -translate-x-1/2 bg-gray-900 text-white text-xs rounded py-1 px-2 opacity-0 pointer-events-none transition-opacity duration-300">Copied!</span>
         </button>
     </div>
-</div>
-
-<div class="mt-12 max-w-2xl mx-auto">
-    <h3 class="text-xl md:text-2xl font-bold">Manual Installation</h3>
-    <p class="text-gray-400 mt-2">If you have already installed the HoML server manually (e.g., using Docker), you can configure the CLI to connect to it.</p>
-    <p class="text-gray-400 mt-4">Run the following command to configure the socket path for the CLI:</p>
-    <div class="relative">
-        <pre class="bg-gray-800 p-4 rounded-lg mt-4 text-green-400 overflow-x-auto"><code>homl config --socket &lt;socket-mount-path-host&gt;</code></pre>
-        <button class="copy-btn absolute top-1/2 right-2 transform -translate-y-1/2 bg-gray-700 hover:bg-gray-600 text-white p-1 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
-            </svg>
-            <span class="copy-tooltip absolute -top-8 left-1/2 -translate-x-1/2 bg-gray-900 text-white text-xs rounded py-1 px-2 opacity-0 pointer-events-none transition-opacity duration-300">Copied!</span>
-        </button>
-    </div>
-    <p class="text-gray-500 mt-4 text-sm">
-        Replace <code>&lt;socket-mount-path-host&gt;</code> with the actual path to the mounted socket.
-    </p>
 </div>
 {% endblock %}
