--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             <p class="text-gray-400 mb-4">Install the HoML server and CLI.</p>
             <div class="relative">
                 <div class="relative">
-                <pre class="bg-gray-900 rounded-lg p-4 text-white overflow-x-auto"><code>homl install</code></pre>
+                <pre class="bg-gray-900 rounded-lg p-4 text-white overflow-x-auto"><code>homl server install</code></pre>
                 <button class="copy-btn absolute top-1/2 right-2 transform -translate-y-1/2 bg-gray-700 hover:bg-gray-600 text-white p-1 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
@@ -62,7 +62,7 @@
             <p class="text-gray-400 mb-4">Start a conversation with a model.</p>
             <div class="relative">
                 <div class="relative">
-                <pre class="bg-gray-900 rounded-lg p-4 text-white overflow-x-auto"><code>homl run gemma-3:4b</code></pre>
+                <pre class="bg-gray-900 rounded-lg p-4 text-white overflow-x-auto"><code>homl chat gemma-3:4b</code></pre>
                 <button class="copy-btn absolute top-1/2 right-2 transform -translate-y-1/2 bg-gray-700 hover:bg-gray-600 text-white p-1 rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
