--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,25 @@
 </div>
 
 <div class="max-w-4xl mx-auto text-left mt-12 md:mt-16">
+    <h3 class="text-2xl md:text-3xl font-bold mb-6 text-center">Key Features</h3>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-12">
+        <div class="bg-gray-800 rounded-lg p-6">
+            <h4 class="text-xl font-semibold mb-2">Ollama-like Experience</h4>
+            <p class="text-gray-400">A simple, intuitive CLI that just works, inspired by Ollama.</p>
+        </div>
+        <div class="bg-gray-800 rounded-lg p-6">
+            <h4 class="text-xl font-semibold mb-2">High-Performance Inference</h4>
+            <p class="text-gray-400">Powered by vLLM for maximum speed and throughput.</p>
+        </div>
+        <div class="bg-gray-800 rounded-lg p-6">
+            <h4 class="text-xl font-semibold mb-2">Automatic GPU Memory Management</h4>
+            <p class="text-gray-400">Models load on demand and unload automatically after a configurable idle time (default 10 mins), freeing up your GPU for other tasks.</p>
+        </div>
+        <div class="bg-gray-800 rounded-lg p-6">
+            <h4 class="text-xl font-semibold mb-2">OpenAI-Compatible API</h4>
+            <p class="text-gray-400">Integrate seamlessly with your existing tools and workflows.</p>
+        </div>
+    </div>
     <h3 class="text-2xl md:text-3xl font-bold mb-6 text-center">Frequently Used Commands</h3>
     <div class="grid grid-cols-1 gap-6">
         <div class="relative bg-gray-800 rounded-lg p-4 md:p-6">
