--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,11 @@
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-12">
         <div class="bg-gray-800 rounded-lg p-6">
             <h4 class="text-xl font-semibold mb-2">Ollama-like Experience</h4>
-            <p class="text-gray-400">A simple, intuitive CLI that just works, inspired by Ollama.</p>
+            <p class="text-gray-400">A simple, intuitive CLI that just works, inspired by <a href="https://github.com/ollama/ollama" class="text-blue-400 hover:underline">Ollama</a>.</p>
         </div>
         <div class="bg-gray-800 rounded-lg p-6">
             <h4 class="text-xl font-semibold mb-2">High-Performance Inference</h4>
-            <p class="text-gray-400">Powered by vLLM for maximum speed and throughput.</p>
+            <p class="text-gray-400">Powered by <a href="https://github.com/vllm-project/vllm" class="text-blue-400 hover:underline">vLLM</a> for maximum speed and throughput.</p>
         </div>
         <div class="bg-gray-800 rounded-lg p-6">
             <h4 class="text-xl font-semibold mb-2">Automatic GPU Memory Management</h4>
